--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "html-minifier": "^4.0.0",
     "live-server": "^1.2.1",
     "postcss-cli": "^6.1.3",
-    "tailwindcss": "^1.1.3"
-  }
+    "tailwindcss": "^1.1.3",
+    "minimist": "^1.2.5"
+  },
+  "dependencies": {}
 }
